// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot: components/Clock.jsx props = {} 1`] = `
<span>
  07:00:00 GMT+0700 (+07)
</span>
`;

exports[`Snapshot: components/Clock.jsx props = {display} 1`] = `
<p>
  1/1/1970
</p>
`;

exports[`Snapshot: components/Clock.jsx props.format = {content} 1`] = `
<span>
  1/1/1970
</span>
`;

exports[`Snapshot: components/Clock.jsx props.format = {wrap, content} 1`] = `
<span>
  1/1/1970
</span>
`;

exports[`Snapshot: components/Clock.jsx props.format = {wrap} 1`] = `
<span>
  07:00:00 GMT+0700 (+07)
</span>
`;
